--- a/index.html
+++ b/index.html
@@ -352,8 +352,9 @@
 
         <!--Form section starts here-->
 
-        <section class="form-section inner">
-            <div class="formarea flex">
+        <section class="form-area">
+            <section class="form-section flex">
+            
                 <div class="form-container">
                     <form action="#" method="post" class="form">
                             <h1 class="secondary-heading">Get your first meal for free!</h1>
@@ -390,8 +391,9 @@
 
                 <div class="eating">
                 </div>
-            </div>
         </section>
+
+    </section>
 
         <!--Form section starts here-->
      </main>
