--- a/index.html
+++ b/index.html
@@ -40,23 +40,25 @@
     <section class="hero-section" id="home">
         <div class="hero-area flex">
             <div class="hero margin">
-                <h1 class="primary-heading">A healthy meal <br> delivered to your door, <br> every single day</h1>
-                <p class="hero-description">The smart 365-days-per-year food subscription that will make you eat healthy again.
-                    Tailored to your personal tastes and nutritional needs.</p>
-                <a href="#" class="btn">Start eating well</a>  
-                <a href="#" class="btn white">Learn more ↓</a>
+                <div class="hero-content">
+                    <h1 class="primary-heading">A healthy meal <br> delivered to your door, <br> every single day</h1>
+                     <p class="hero-description">The smart 365-days-per-year food subscription that will make you eat healthy again.
+                           Tailored to your personal tastes and nutritional needs.</p>
+                     <a href="#" class="btn">Start eating well</a>  
+                     <a href="#" class="btn white">Learn more ↓</a>
                 
-                <div class="customers-area flex">
-                    <div class="customers flex">
-                        <img oncontextmenu="return false" src="img/customers/customer-1.jpg" alt="customer" class="customer">
-                        <img oncontextmenu="return false" src="img/customers/customer-2.jpg" alt="customer" class="customer">
-                        <img oncontextmenu="return false" src="img/customers/customer-3.jpg" alt="customer" class="customer">
-                        <img oncontextmenu="return false" src="img/customers/customer-4.jpg" alt="customer" class="customer">
-                        <img oncontextmenu="return false" src="img/customers/customer-5.jpg" alt="customer" class="customer">
-                        <img oncontextmenu="return false" src="img/customers/customer-6.jpg" alt="customer" class="customer">
-                    </div>
+                     <div class="customers-area flex">
+                           <div class="customers flex">
+                               <img oncontextmenu="return false" src="img/customers/customer-1.jpg" alt="customer" class="customer">
+                               <img oncontextmenu="return false" src="img/customers/customer-2.jpg" alt="customer" class="customer">
+                               <img oncontextmenu="return false" src="img/customers/customer-3.jpg" alt="customer" class="customer">
+                               <img oncontextmenu="return false" src="img/customers/customer-4.jpg" alt="customer" class="customer">
+                               <img oncontextmenu="return false" src="img/customers/customer-5.jpg" alt="customer" class="customer">
+                               <img oncontextmenu="return false" src="img/customers/customer-6.jpg" alt="customer" class="customer">
+                            </div>
 
-                    <p class="customers-reviews"><span>25,000+</span> meals delivered last year!</p>
+                            <p class="customers-reviews"><span>25,000+</span> meals delivered last year!</p>
+                     </div>
                 </div>
             </div>
 
